Revision history for Perl extension threads::shared.

1.11 Mon May 14 12:13:37 2007
	- Modify stress test to be TODO under MSWin32
	- Store user locks safely

1.09 Mon Apr  9 16:49:30 EDT 2007
	- Modify stress test to not hang under MSWin32
	- Fix casting issue under MSWin32
	- Subversion repository on Google

1.08 Fri Mar 16 08:31:50 EDT 2007
	- Sub-second resolution for cont_timedwait under MSWin32
	    (courtesy of Dean Arnold)
	- Fix compiler warnings
	- Upgraded ppport.h to Devel::PPPort 3.11

1.07 Wed Feb  7 10:44:22 EST 2007
	- POD tweaks per Wolfgang Laun

1.06 Wed Dec 20 14:01:57 EST 2006
	- Fixed a bug in unlocking code
	- Added stress test for cond_* functions

1.05 Wed Oct 25 14:27:36 EDT 2006
	- Makefile.PL changes for CORE
	- g++ build fixes

1.04 Thu Oct 12 10:50:46 EDT 2006
	- Added example script
	- Added POD tests

1.03 Fri Sep 15 15:09:26 EDT 2006
	- Fix memory leak caused by blessed shared objects
	- Upgraded ppport.h to Devel::PPPort 3.10

1.02 Fri Jul 14 08:56:03 EDT 2006
	- Skip failing thread/wait tests on HP-UX 10.20 (patch 27920)
	- Check for 'C' compiler when building module
	- Remove BEGIN block in .pm file
	- Upgraded ppport.h to Devel::PPPort 3.09

1.01 Sat Mar 25 18:46:44 EST 2006
	- Restoration of 'core' build parameters

0.99 Sun Mar 19 17:38:52 EST 2006
	- Use $ENV{PERL_CORE} in tests
	- More XS code cleanups
	- Eliminated use of Exporter

0.98 Fri Mar 17 13:25:34 EST 2006
	- XS code cleanup

0.97 Mon Mar 13 14:30:50 EST 2006
	- Cleaned up shared.h as part of the ppport.h upgrade
	- Cleaned up tests
	- Compatible with 5.9.3

0.96 Mon Feb 27 16:50:07 EST 2006
	- Added 'is_shared' as alias to '_id'
	- Upgraded ppport.h to v3.08
	- Updated POD with discussion of bless()

0.95 Fri Feb 03 16:46:00 2006
	- Initial (re-)release to CPAN
	- 'bless' is now supported on shared refs
